--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -14,14 +14,16 @@ body{
   display: flex;
   justify-content:center;
   align-items: center;
+  
 }
 
 .spFrame{
   width: 100%;
   height: 100%;
   max-width: 430px;
-  background-color:lightgray;
+  background-color:#FFFFFF;
   box-sizing: border-box;
+  
 }
 
 .header{
@@ -30,8 +32,22 @@ body{
   height: 60px;
   box-sizing: border-box;
   position: fixed;
-  background-color:white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 20px;
   z-index: 100;
+  background-color: #ffffff;
+  border-bottom:  rgb(235, 235, 235) solid 0.25px;
+}
+
+.header h1{
+  height: 40px;
+}
+.header h1 img{
+  object-fit: cover;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .footer{
@@ -40,7 +56,7 @@ body{
   box-sizing: border-box;
   position: fixed;
   bottom: 0;
-  background-color:white;
+  background-color:none;
   z-index: 100;
 }
 .footer__frame{
@@ -55,4 +71,13 @@ body{
   text-align: center;
   padding: 10px;
   box-sizing: border-box;
+  background-color:#FFE0EC;
+  color: #FFFFFF;
+  font-weight: bold;
+  border-bottom:  rgb(231, 231, 231) solid 0.25px;
+  box-sizing: border-box;
+
+}
+.aBtnActive{
+  filter: brightness(0.9);
 }
