--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -8,7 +8,7 @@
 .linkCamera{
   width: 100%;
   height: 90px;
-  background-color: white;
+  background-color:rgba(255,255,255,0.85);
   z-index: 100;
   padding: 20px;
   box-sizing: border-box;
@@ -20,7 +20,7 @@
   height: 50px;
   border-radius: 20px;
   color: white;
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(207, 207, 207);
   text-align: center;
   line-height: 50px;
   margin: 0 auto;
@@ -28,7 +28,7 @@
 }
 
 .linkCamera__btn.active{ 
-  background-color: pink;
+  background-color:#59D100
 }
 
 .linkCamera__btn.active:hover{
