--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -18,12 +18,11 @@ body{
 }
 
 .spFrame{
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   max-width: 430px;
-  background-color:#FFFFFF;
+  background-color:black;
   box-sizing: border-box;
-  
 }
 
 .header{
@@ -81,3 +80,4 @@ body{
 .aBtnActive{
   filter: brightness(0.9);
 }
+
