--- a/assets/css/camera.css
+++ b/assets/css/camera.css
@@ -9,19 +9,19 @@
   position: relative;
 }
 
-#canvasFrame{
-  position: absolute;
-  display: block;
-  width: 100%;
-  max-width: 430px;
-  aspect-ratio: 1/1;
-  top:50%;
-  left: 0;
-  transform: translateY(-50%);
+#photoFrame{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
 }
 
-#canvas{display: none;}
-
+#canvas{
+  display: none;
+}
+#synthesis{
+  display: none;
+}
 .camera__footer{
   width: 100%;
   max-width: 430px;
