--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,45 @@
 @charset"UTF-8";
-.stamp{
+.indexFrame{
   width: 100%;
-  max-width: 430px;
-  background-color: gray;
+  height: 100vh;
+  background-color: #FFFFFF;
+  padding-block: 100px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.figureFrame{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.zunko{
+  width: 60%;
+}
+.zunko img{
+  display: block;
+  width: 100%;
+}
+
+.logo{
+  width: 60%;
+}
+.logo img{
+  display: block;
+  width: 100%;
+}
+
+.subtitle{
+  font-size: 2.0rem;
+}
+
+.copy{
+  font-size: 1.2rem;
 }
